# khoj-arXiv-tool

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/arXiv_rtool/: app.py  app.tcss  arXivClient.py  models.py  rateLimiter.py
src/arXiv_rtool/widgets/: details_pane.py  results_pane.py  search_input.py
