[project]
name = "arxiv-rtool"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["textual", "httpx"]

[project.scripts]
khoj = "arxiv_rtool.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_rtool"]

[tool.hatch.build.targets.wheel.force-include]
"src/arxiv_rtool/app.tcss" = "arxiv_rtool/app.tcss"

[tool.hatch.build.targets.sdist]
include = [
    "src/arxiv_rtool/**/*.py",
    "src/arxiv_rtool/**/*.tcss",
    "pyproject.toml",
    "README.md",
]